--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@
     width: 150px;
     height: 150px;
 }
+
+#termekek {
+    padding-top: 20px;
+}
+
+#kosarfelirat {
+    padding-top: 18px;
+}
+
+footer {
+    padding-top: 30px;
+}
